Slider and cost fixed

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="navbar-header col-xs-12 col-sm-8">
                 <div class="col-xs-12 col-sm-3"><a class="navbar-brand" href="#"><b>Smart часы</b></a></div>
                 <div class="col-xs-12 col-sm-9" style="text-transform: uppercase;color: black;font-weight: 400;">
-                    <div><span style="color: red;">Акция!</span> Скидка <span id="discount">40%</span> Успей купить</div>
-                    <div>Всего <span style="text-decoration: line-through; color: red;">2500 грн.</span> <span class="newCost">1599 грн.</span></div>
+                    <div><span style="color: red;">Акция!</span> Скидка <span id="discount">45%</span> Успей купить</div>
+                    <div>Всего <span style="text-decoration: line-through; color: red;">2500 грн.</span> <span class="newCost">1399 грн.</span></div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 phone1" style="text-align: right;">
@@ -44,7 +44,9 @@
                 </div>
             </div>
             <!-- <div class="col-xs-12 col-sm-3"> -->
-                <label class="col-xs-12 col-sm-2" for="mail" style="cursor: pointer;"><div class="btn btn-success btn-block">Заказать звонок</div></label>
+            <label class="col-xs-12 col-sm-2" for="mail" style="cursor: pointer;">
+                <div class="btn btn-success btn-block">Заказать звонок</div>
+            </label>
             <!-- </div> -->
             <!--/.nav-collapse -->
         </div>
@@ -56,7 +58,7 @@
                     <div class="row">
                         <div id="timer1" class="col-xs-12">
                             <span style="font-size: 27px;">До конца <span>акции:</span></span>
-                            <script src="http://megatimer.ru/s/83a2c00b4e3c196df754b883cec28c66.js"></script>
+                            <script src="http://megatimer.ru/s/77c240001d2cd845c503c9cdcb93894a.js"></script>
                         </div>
                     </div>
                     <div class="row">
@@ -79,9 +81,9 @@
                         </div>
                         <div class="col-xs-12 col-sm-5" id="cost1" style="font-size: 27px;">
                             <div>Цена:</div>
-                            <div>Всего <span class="newCost">1599 грн.</span></div>
+                            <div>Всего <span class="newCost">1399 грн.</span></div>
                             <div style="text-decoration: line-through; color: red;">Вместо 2500 грн.</div>
-                            <div>Экономия <span class="newCost">40%</span></div>
+                            <div>Экономия <span class="newCost">45%</span></div>
                         </div>
                     </div>
                 </div>
@@ -338,7 +340,7 @@
                         <div style="margin-bottom: 5%;">
                             <span style="font-size: 27px;margin-bottom: 5%;">До конца <span>акции:</span></span>
                         </div>
-                        <script src="http://megatimer.ru/s/eb6ea2704ffbdadacfde26e5c072e8d8.js"></script>
+                        <script src="http://megatimer.ru/s/c827de5d2c9bf3ee4e5a453190c299f6.js"></script>
                     </div>
                 </div>
                 <div class="row">
@@ -363,9 +365,9 @@
                     </div>
                     <div class="col-xs-12 col-sm-5 textCenter" style="font-size: 27px;color: black; margin-top: 5%;">
                         <div>Цена:</div>
-                        <div>Всего <span class="newCost" style="color: green;">1599 грн.</span></div>
+                        <div>Всего <span class="newCost" style="color: green;">1399 грн.</span></div>
                         <div style="text-decoration: line-through; color: red;">Вместо 2500 грн.</div>
-                        <div>Экономия <span class="newCost" style="color: green;">40%</span></div>
+                        <div>Экономия <span class="newCost" style="color: green;">45%</span></div>
                         <label for="mail" class="btn btn-success btn-lg btn-block" style="cursor: pointer;">Обратный звонок</label>
                     </div>
                 </div>
@@ -412,7 +414,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="margin-top: 2%;">
+        <div class="row textCenter" style="margin-top: 2%;">
             <div class="col-xs-12" style="text-align: center;margin-bottom: 2%;">
                 <div style="font-size: 27px;font-weight: 800;text-decoration: underline;">
                     Отзывы клиентов
@@ -420,13 +422,13 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-8" style="margin: auto;float: none;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-12 col-sm-2">
                         <img src="assets/img/comm/comm5.jpg" class="round" alt="Фото" />
                         <div style="margin-top: 2%; text-align: center">
                             <b>Максим Балай</b>
                         </div>
                     </div>
-                    <div class="col-xs-10">
+                    <div class="col-xs-12 col-sm-10">
                         <div>
                             <p><b>«Отличные акции»</b></p>
                         </div>
@@ -436,13 +438,13 @@
             </div>
             <div class="row" style="margin-top: 2%;">
                 <div class="col-xs-12 col-sm-8" style="margin: auto;float: none;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-12 col-sm-2">
                         <img src="assets/img/comm/comm4.jpg" class="round" alt="Фото" />
                         <div style="margin-top: 2%; text-align: center">
                             <b>Анна Рогозов</b>
                         </div>
                     </div>
-                    <div class="col-xs-10">
+                    <div class="col-xs-12 col-sm-10">
                         <div>
                             <p><b>«Огромное количество функций»</b></p>
                         </div>
@@ -452,13 +454,13 @@
             </div>
             <div class="row" style="margin-top: 2%;">
                 <div class="col-xs-12 col-sm-8" style="margin: auto;float: none;">
-                    <div class="col-xs-2">
+                    <div class="col-xs-12 col-sm-2">
                         <img src="assets/img/comm/comm2.jpg" class="round" alt="Фото" />
                         <div style="margin-top: 2%; text-align: center">
                             <b>Андрей Романов</b>
                         </div>
                     </div>
-                    <div class="col-xs-10">
+                    <div class="col-xs-12 col-sm-10">
                         <div>
                             <p><b>Отличный выбор для спортсменов»</b></p>
                         </div>
