Write logic which send on mail question

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
 </html>
 <div id="popup">
-    <form method="post" action="mail.php">
+    <form method="post" action="./assets/callback/mail.php">
         <label for="mail" title="Отменить" class="b2">✕</label>
         <div style=" text-align: center; font-size: 18px; margin-top: -25px; color:#637bad;">Заказать звонок
         </div>
@@ -494,7 +494,7 @@
         </div>
         </br>
         <div style="display:block;">
-            <input size="16 " style="width: 100%;" class="b1 " type="tel " name='tel' required maxlength="11 " value='Телефон*' "/ onfocus="if (this.value=='Телефон*' ) this.value='' " onblur="if (this.value=='' ){this.value='Телефон*' } ">
+            <input size="16 " style="width: 100%;" class="b1 " type="tel " name='tel' required maxlength="18" value='Телефон*' "/ onfocus="if (this.value=='Телефон*' ) this.value='' " onblur="if (this.value=='' ){this.value='Телефон*' } ">
       </div>
       <div>
 
