--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 </head>
 
 <body style="overflow: hidden; margin-bottom: 100px;">
-    <input type="checkbox" id="mail" />
-    <label for="mail" style="cursor: pointer; "></label>
+    
     <!-- Fixed navbar -->
-    <div class="navbar navbar-default" style="margin-top: -2%; background-color: rgba(0, 0, 0, 0.05);">
+    <div class="navbar navbar-default" style="background-color: rgba(0, 0, 0, 0.05);">
         <div class="container" style="margin-top: 1%;">
             <div class="navbar-header col-xs-12 col-sm-8">
                 <div class="col-xs-12 col-sm-3"><a class="navbar-brand" href="#"><b>Smart часы</b></a></div>
@@ -65,11 +64,11 @@
                         <div class="col-xs-12 col-sm-7">
                             <h1>Сделать заказ</h1>
                             <!-- <div class="col-xs-12 col-sm-7"> -->
-                            <form class="form-inline" role="form">
+                            <form form method="post" action="./assets/callback/order.php">
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ваше имя">
-                                    <input type="email" style="margin: 2% 0;" class="form-control" id="exampleInputEmail1" placeholder="Телефон">
-                                    <select class="form-control" style="width: 280px; margin: 0 0 2% 0;">
+                                    <input type="text" name='name' class="form-control" id="exampleInputEmail1" placeholder="Ваше имя">
+                                    <input type="tel" name='tel' style="margin: 2% 0;" class="form-control" id="exampleInputEmail1" placeholder="Телефон">
+                                    <select class="form-control" name='watch' style="width: 280px; margin: 0 0 2% 0;">
                                         <option value="" disabled selected>Выберите цвет</option>
                                         <option>Серебряный</option>
                                         <option>Золотой</option>
@@ -242,7 +241,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <ul style="color: #3aa6d4; line-height: 40px;">
+                <ul style="color: #3aa6d4; line-height: 40px;padding: 0;">
                     <li><span class="tehnic">Связь:</span> <span class="deskTeh">GSM 850/900/1800/1900 МГц</span></li>
                     <li><span class="tehnic">Язык меню:</span> <span class="deskTeh">мультиязычный (включая русский)</span></li>
                     <li><span class="tehnic">Время работы в режиме ожидания:</span> <span class="deskTeh">160 часов </span></li>
@@ -349,18 +348,18 @@
                             <p>Сделать заказ</p>
                         </div>
                         <!-- <div class="col-xs-12 col-sm-7"> -->
-                        <form class="form-inline" role="form">
-                            <div class="form-group">
-                                <input type="email" class="form-control fullWidth" id="exampleInputEmail1" placeholder="Ваше имя">
-                                <input type="email" style="margin: 2% 0;" class="form-control fullWidth" id="exampleInputEmail1" placeholder="Телефон">
-                                <select class="form-control fullWidth" style="margin: 0 0 2% 0;">
-                                    <option value="" disabled selected>Выберите цвет</option>
-                                    <option>Серебряный</option>
-                                    <option>Золотой</option>
-                                </select>
-                            </div>
-                            <button type="submit" class="btn btn-warning btn-lg btn-block">Заказать!</button>
-                        </form>
+                        <form form method="post" action="./assets/callback/order.php">
+                                <div class="form-group">
+                                    <input type="text" name='name' class="form-control" id="exampleInputEmail1" placeholder="Ваше имя">
+                                    <input type="text" name='tel' style="margin: 2% 0;" class="form-control" id="exampleInputEmail1" placeholder="Телефон">
+                                    <select class="form-control" name='watch' style="width: 280px; margin: 0 0 2% 0;">
+                                        <option value="" disabled selected>Выберите цвет</option>
+                                        <option>Серебряный</option>
+                                        <option>Золотой</option>
+                                    </select>
+                                </div>
+                                <button type="submit" style="width: 280px;" class="btn btn-warning btn-lg">Заказать!</button>
+                            </form>
                         <!-- </div> -->
                     </div>
                     <div class="col-xs-12 col-sm-5 textCenter" style="font-size: 27px;color: black; margin-top: 5%;">
@@ -471,6 +470,8 @@
         </div>
     </div>
     </div>
+    <input type="checkbox" id="mail" />
+    <label for="mail" style="cursor: pointer; "></label>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
